[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
#opt-level = 3
incremental = false
codegen-units = 1
opt-level = "z"
overflow-checks = true

[patch.crates-io]
proc-macro2 = { path = "patches/proc-macro2/proc-macro2-1.0.95", version = "1.0.95" }
